--- a/templates/includes/monkey_card.html
+++ b/templates/includes/monkey_card.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<link href="{% static 'other/monkeys/detail.css' %}" rel="stylesheet">
+<link href="{% static 'other/monkeys/css/detail.css' %}" rel="stylesheet">
 
 
 <img src="{{ monkey }}" class="d-block" alt="фото обезьяны">
