--- a/templates/base.html
+++ b/templates/base.html
@@ -15,9 +15,9 @@
 
     <title>Главная</title>
 </head>
-<body>
+<body class="bg-dark">
     {% include "includes/header.html" %}
-    <main>
+    <main class="container text-center">
         {% block content %}{% endblock %}
     </main>
     {% include "includes/footer.html" %}
