detail page design updated

--- a/static_dev/other/monkeys/css/detail.css
+++ b/static_dev/other/monkeys/css/detail.css
@@ -1,5 +1,7 @@
 .card {
-    width: 40rem;
+    max-width: 40rem;
     border: none;
     color: white;
+    margin-left: auto;
+    margin-right: auto;
 }
