--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
 </head>
 <body class="bg-dark">
     {% include "includes/header.html" %}
-    <main class="container text-center">
+    <main class="container">
         {% block content %}{% endblock %}
     </main>
     {% include "includes/footer.html" %}
