--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     <meta name="theme-color" content="#ffffff">
 
     <link href="{% static 'bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{% static 'other/monkeys/css/base.css' %}" rel="stylesheet">
+    <link href="{% static 'other/css/base.css' %}" rel="stylesheet">
 
     <title>Главная</title>
 </head>
