--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
     <link href="{% static 'bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'other/css/base.css' %}" rel="stylesheet">
 
-    <title>Главная</title>
+    <title>HTTP Monkeys</title>
 </head>
 <body class="bg-dark">
     {% include "includes/header.html" %}
