--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
     <main class="container">
         {% block content %}{% endblock %}
     </main>
-    {% include "includes/footer.html" %}
+    {% include "includes/footer.html" with contacts=contacts %}
 <script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 </body>
 </html>
