--- a/templates/homepage/index.html
+++ b/templates/homepage/index.html
@@ -5,6 +5,8 @@
 {% block content %}
 <link rel="stylesheet" href="{% static 'other/css/index.css' %}">
 
+{% include "includes/clipboard.html" %}
+
 <div class="container">
 
     {% if monkeys %}
