--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
 
     <title>HTTP Monkeys</title>
 </head>
-<body class="bg-dark">
+<body>
     {% include "includes/header.html" %}
     <main class="container">
         {% block content %}{% endblock %}
