--- a/templates/includes/monkey_card.html
+++ b/templates/includes/monkey_card.html
@@ -4,7 +4,7 @@
 
 <div class="col-md-4 col-sm-6">
     <a href="{% url 'monkeys:detail' monkey.code %}">
-      <div class="card bg-dark mt-3">
+      <div class="card mt-3">
           <img src="{{ monkey }}" class="card-img-top" alt="monkey image">
           <div class="card-body">
             <h5 class="card-title">{{ monkey.code }}</h5>
