--- a/templates/monkeys/detail.html
+++ b/templates/monkeys/detail.html
@@ -9,7 +9,7 @@
         <a class="text-white" href="{% url 'homepage:index' %}">&lt; Back to home</a>
     </nav>
 
-    <div class="card bg-dark">
+    <div class="card">
         <h1 class="text-center">{{ monkey.code }} {{ monkey.title }}</h1>
         <img src="{{ monkey }}" class="card-img" alt="monkey image">
         <div class="card-body">
