--- a/static_dev/other/css/detail.css
+++ b/static_dev/other/css/detail.css
@@ -1,7 +1,8 @@
 .card {
     max-width: 40rem;
-    border: none;
+    background-color: #222222;
     color: white;
+    border: none;
     margin-left: auto;
     margin-right: auto;
 }
