--- a/templates/includes/clipboard.html
+++ b/templates/includes/clipboard.html
@@ -2,10 +2,15 @@
 
 <link href="{% static 'other/css/clipboard.css' %}" rel="stylesheet">
 
-<div class="clipboard-example align-items-center w-50">
-	<div class="input-group mb-3">
-		<input id="in01" type="text" class="form-control" placeholder="BTC Address..." aria-label="BTC Address" aria-describedby="btn01" value="39XMhLRH54kNyYHfiUWC8xrz5HRmZQxL7f" readonly>
-		<button id="btn01" class="btn btn-secondary" type="button" data-clipboard-demo="" data-clipboard-target="#in01" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Copy to Clipboard">Copy</button>
+<div class="clipboard">
+	<div class="alert m-0 d-flex justify-content-between align-items-center" role="alert" id="in01" aria-describedby="btn01">
+		<span class="alert-text">http://127.0.0.1:8000/[status_code]</span>
+		<button type="button" class="btn btn-danger" id="btn01" data-clipboard-demo="" data-clipboard-target="#in01" data-bs-toggle="tooltip" data-bs-placement="bottom">
+			<svg width="25" height="25" fill="currentColor" class="bi bi-clipboard" viewBox="0 0 16 16">
+				<path d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1v-1z"></path>
+				<path d="M9.5 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h3zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3z"></path>
+			</svg>
+		</button>
 	</div>
 </div>
 
